<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="NoteBox"
        app:titleTextColor="@color/text" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/bejelentkezes_title"
        android:textAllCaps="true"
        android:textColor="@color/text_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        app:rippleColor="@color/text"
        android:id="@+id/GoogleLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:onClick="googleLogin"
        android:text="@string/google_bejelentkezes"
        android:textColor="@color/text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:backgroundTint="@color/first_button"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconPadding="0dp"
        app:iconTint="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/vagyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vagy"
        android:textAllCaps="true"
        android:textColor="@color/text"
        android:textSize="@dimen/important_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GoogleLoginButton"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        app:backgroundTint="@color/first_button"
        android:layout_margin="@dimen/input_margin"
        android:padding="@dimen/input_padding"
        android:ems="10"
        android:hint="@string/email_cim_input"
        android:textColorHint="@color/hint_text"
        android:textColor="@color/text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vagyTextView"
        app:layout_constraintVertical_bias="0.050000012"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="@string/jelszo_input"
        android:inputType="textPassword"
        android:padding="@dimen/input_padding"
        android:textColor="@color/text"
        android:textColorHint="@color/hint_text"
        app:backgroundTint="@color/first_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"
        app:layout_constraintVertical_bias="0.055"
        tools:layout_editor_absoluteX="15dp" />

    <com.google.android.material.button.MaterialButton
        app:rippleColor="@color/text"
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/first_button"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:text="@string/login"
        android:textColor="@color/text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword"
        app:layout_constraintVertical_bias="0.083" />

    <com.google.android.material.button.MaterialButton
        app:rippleColor="@color/text"
        android:id="@+id/RegisterPageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_padding_margin"
        android:onClick="register"
        android:text="@string/regisztracio"
        android:textColor="@color/text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:backgroundTint="@color/first_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>