<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".CreateActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/menu"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="NoteBox"
            app:titleTextColor="@color/text" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/uj_jegyzet"
            android:textColor="@color/text_title"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/jegyzet_cim"
            android:layout_margin="@dimen/input_margin"
            android:padding="@dimen/input_padding"
            android:ems="10"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintVertical_bias="0.050000012" />

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="top|start"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="3"
            android:layout_margin="@dimen/input_margin"
            android:padding="@dimen/input_padding"
            android:ems="10"
            android:scrollbars="vertical"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"
            app:layout_constraintVertical_bias="0.050000012" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:onClick="saveNote"
            android:text="@string/mentes"
            android:textColor="@color/text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:backgroundTint="@color/first_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentEditText"
            app:layout_constraintVertical_bias="0.100000024"
            app:rippleColor="@color/text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:onClick="cancelNote"
            android:text="@string/vissza"
            android:textColor="@color/text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:backgroundTint="@color/first_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="@color/text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
