<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="NoteBox"
        app:titleTextColor="@color/text"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="68dp"
        android:src="@mipmap/logo"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <com.google.android.material.button.MaterialButton
        android:visibility="invisible"
        app:rippleColor="@color/text"
        android:id="@+id/GuestLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/first_button"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:text="@string/vendeg_bejelentkezes"
        android:textColor="@color/text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:onClick="guestLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.208" />

    <com.google.android.material.button.MaterialButton
        android:visibility="invisible"
        app:rippleColor="@color/text"
        android:id="@+id/LoginPageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_padding_margin"
        android:onClick="login_page"
        android:text="@string/login"
        android:textColor="@color/text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:backgroundTint="@color/first_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GuestLoginButton"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:visibility="invisible"
        app:rippleColor="@color/text"
        android:id="@+id/RegisterPageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_padding_margin"
        android:onClick="register_page"
        android:text="@string/regisztracio"
        android:textColor="@color/text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:backgroundTint="@color/first_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPageButton"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>